kanc/src/tests/sample_code/should_fail/single_file/type_check/illegal_callee/forall.k
type Empty {}

let foo = forall(T: Type) { Type }(Empty);
